--- a/TickTackTo/MainWindow.xaml
+++ b/TickTackTo/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TickTackTo"
         mc:Ignorable="d"
-        Title="Tic Tac Toe"  Height="466" Width="600">
+        Title="Tic Tac Toe"  Height="555" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*" />
@@ -31,21 +31,21 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
-            <Button Name="Button0" Grid.Row="0" Grid.Column="0" FontSize="36" Click="Button_Click"/>
-            <Button Name="Button1" Grid.Row="0" Grid.Column="1" FontSize="36" Click="Button_Click"/>
-            <Button Name="Button2" Grid.Row="0" Grid.Column="2" FontSize="36" Click="Button_Click"/>
-            <Button Name="Button3" Grid.Row="1" Grid.Column="0" FontSize="36" Click="Button_Click"/>
-            <Button Name="Button4" Grid.Row="1" Grid.Column="1" FontSize="36" Click="Button_Click"/>
-            <Button Name="Button5" Grid.Row="1" Grid.Column="2" FontSize="36" Click="Button_Click"/>
-            <Button Name="Button6" Grid.Row="2" Grid.Column="0" FontSize="36" Click="Button_Click"/>
-            <Button Name="Button7" Grid.Row="2" Grid.Column="1" FontSize="36" Click="Button_Click"/>
-            <Button Name="Button8" Grid.Row="2" Grid.Column="2" FontSize="36" Click="Button_Click"/>
+            <Button Name="Button0" Grid.Row="0" Grid.Column="0" FontSize="36" Click="Button_Click" IsEnabled="False"/>
+            <Button Name="Button1" Grid.Row="0" Grid.Column="1" FontSize="36" Click="Button_Click" IsEnabled="False"/>
+            <Button Name="Button2" Grid.Row="0" Grid.Column="2" FontSize="36" Click="Button_Click" IsEnabled="False"/>
+            <Button Name="Button3" Grid.Row="1" Grid.Column="0" FontSize="36" Click="Button_Click" IsEnabled="False"/>
+            <Button Name="Button4" Grid.Row="1" Grid.Column="1" FontSize="36" Click="Button_Click" IsEnabled="False"/>
+            <Button Name="Button5" Grid.Row="1" Grid.Column="2" FontSize="36" Click="Button_Click" IsEnabled="False"/>
+            <Button Name="Button6" Grid.Row="2" Grid.Column="0" FontSize="36" Click="Button_Click" IsEnabled="False"/>
+            <Button Name="Button7" Grid.Row="2" Grid.Column="1" FontSize="36" Click="Button_Click" IsEnabled="False"/>
+            <Button Name="Button8" Grid.Row="2" Grid.Column="2" FontSize="36" Click="Button_Click" IsEnabled="False"/>
         </Grid>
 
         <!-- Einstellungen -->
-        <StackPanel Grid.Column="1" Grid.Row="1" Margin="10,10,10,21" Grid.RowSpan="3">
-            <TextBlock Name="CurrentPlayerText" HorizontalAlignment="Center" FontSize="24" Margin="10"/>
-            <TextBlock Text="Spielmodus:" FontSize="16" Margin="5"/>
+        <StackPanel Grid.Column="1" Grid.Row="1" Margin="10,10,10,10" Grid.RowSpan="3">
+            <TextBlock Name="CurrentPlayerText" HorizontalAlignment="Center" FontSize="24" Margin="10" Width="240"/>
+            <TextBlock Text="Spielmodus:" FontSize="16" Margin="5" RenderTransformOrigin="0.47,-1.897"/>
             <RadioButton x:Name="LocalMultiplayerOption" Content="Lokaler Multiplayer" Checked="Mode_Checked" Margin="5"/>
             <RadioButton x:Name="OnlineMultiplayerOption" Content="Online Multiplayer" Checked="Mode_Checked" Margin="5"/>
             <RadioButton x:Name="SingleplayerOption" Content="Singleplayer" Checked="Mode_Checked" Margin="5"/>
@@ -61,7 +61,8 @@
             <TextBox Name="RoomIdTextBox" Text="Raum ID" Margin="5"/>
             <Button Name="CreateOnlineGameButton" Content="Online-Spiel erstellen" Click="CreateOnlineGame_Click" Margin="5"/>
             <Button Name="JoinOnlineGameButton" Content="Online-Spiel beitreten" Click="JoinOnlineGame_Click" Margin="5"/>
-
+            <Button Content="Neue Runde" Click="ResetGame_Click" Margin="5" Visibility="Collapsed" Name="ResetGameButton"/>
+            <Button Content="Spiel verlassen und Neu erstellen" Click="NewGame_Click" Margin="5" Visibility="Collapsed" Name="NewGameButton"/>
             <TextBlock Name="PlayerSymbolText" FontSize="16" Margin="5" Visibility="Collapsed"/>
         </StackPanel>
     </Grid>
